Add domain export
